# sitebay-mcp

./: .gitignore  Dockerfile  PLAN.md  README.md  example-config.json  full_openapi.json  info.txt  package-lock.json  package.json  pyproject.toml  schema.json  smithery.http.yaml.example  smithery.yaml  test-config.json  test-server.sh  tsconfig.json  wrangler.toml
.github/workflows/: testpypi.yaml
.smithery/shttp/: manifest.json  module.js  module.js.map
scripts/: build-embeddings.ts  update_spec.sh
src/: embeddings.json  index.ts  proxy-payload.d.ts  proxy-payload.js  tool-response.d.ts  tool-response.js
src/mcp_sitebay/: auth.py  server.py
src/mcp_sitebay/tools/: sites.py
src/sitebay_mcp/: __init__.py  client.py  exceptions.py  openapi_spec.json  resources.py  server.py
src/sitebay_mcp/tools/: __init__.py  operations.py  sites.py
tests/unit/: index-tools.test.mjs  proxy-payload.test.mjs  test_auth.py  test_client.py  test_openapi_normalization.py  tool-response.test.mjs
workers/sitebay-proxy/: index.mjs
