[project]
name = "sitebay-mcp"
version = "0.1.0"
description = "SiteBay MCP Server - WordPress hosting management through Claude Code"
authors = [{name = "SiteBay", email = "support@sitebay.org"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    # HTTP + SSE transport runtime for FastMCP
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
    "sse-starlette>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sitebay-mcp = "sitebay_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sitebay_mcp"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "B008", "PLR0913", "PLR0912", "PLR0915", "TRY003", "UP038"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
